--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ span {
     width: 100%;
     height: 30rem;
     justify-content: center;
+    margin-bottom: 4rem;
 }
 
 h2 {
@@ -117,8 +118,8 @@ h2 {
 .card {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 5px;
-    margin-bottom: 8rem;
+    gap: 1rem;
+    margin-bottom: 3rem;
     justify-items: center;
 }
 
