--- a/css/style.css
+++ b/css/style.css
@@ -264,9 +264,6 @@ button:hover {
     background-color: #a64208;
 }
 
-
-
-
 footer {
     font-family: 'Alegreya', serif;
     font-size: 1.2rem;
@@ -289,6 +286,11 @@ footer img {
 footer a {
     color: #0D0D0D;
     font-family: 'Fjalla One', sans-serif;
+    transition: font-size 1s;
+}
+
+footer a:hover {
+    font-size: 1.5rem;
 }
 
 
