--- a/css/style.css
+++ b/css/style.css
@@ -32,32 +32,20 @@ header {
     grid-template-columns: 1fr 3fr;
 }
 
-.navbar__title {
+.navbar__menu-title {
     font-size: 3.5rem;
     color: white;
     padding-left: 1.5rem;
     text-decoration: none;
 }
 
+.navbar__menu-title:hover {
+    color: white;
+}
+
 .navbar__menu {
     display: flex;
 }
-
-/* .navbar__menu a {
-    transition: color 1s;
-    font-size: larger 1s;
-}
-
-.navbar__menu a:hover {
-    color: white;
-} */
-
-/* .navbar img {
-    width: 2rem;
-    height: 2rem;
-} */
-
-
 
 .navbar ul {
     font-family: 'Fjalla One', sans-serif;
@@ -76,6 +64,7 @@ header {
 
 .navbar ul li a:hover {
     animation: border 1s forwards;
+    transform: active 3s;
 }
 
 @keyframes border {
@@ -87,6 +76,10 @@ header {
         font-weight: bolder;
         border-bottom: 2px white solid;
     }
+}
+
+.navbar ul li a:active {
+    font-size: 1.3rem;
 }
 
 main {
@@ -135,6 +128,8 @@ h2 {
     gap: 1rem;
     margin-bottom: 3rem;
     justify-items: center;
+    background-color:#f2f2f2;
+    border-style: hidden;
 }
 
 .card__product {
@@ -169,6 +164,7 @@ h2 {
 
 .card__product h3 {
     font-family: 'Alegreya', serif;
+    font-size: 1.5rem;
     text-align: center;
     margin-bottom: 0.5rem;
 }
@@ -189,6 +185,7 @@ h2 {
     padding: 1px;
     text-align: center;
     transition: background-color 1s;
+    text-decoration: none;
 }
 
 .card__product a:hover {
