--- a/css/style.css
+++ b/css/style.css
@@ -107,12 +107,19 @@ main {
 }
 
 .multimedia {
-    margin-top: 5rem;
+    margin: 6rem auto;
     display: flex;
-    width: 100%;
-    height: 30rem;
     justify-content: center;
-    margin-bottom: 4rem;
+}
+
+.carousel-item {
+    width: 40rem;
+    height: 40rem;
+}
+
+.carousel-item img {
+    width: 100%;
+    height: 100%;
 }
 
 h2 {
@@ -417,27 +424,25 @@ footer a:hover {
     }
 }
 
-@media screen and (max-width:900px) {
-    .multimedia {
-        height: 25rem;
+@media screen and (max-width:750px) {
+    .carousel-item {
+        width: 30rem;
+        height: 30rem;
     }
 }
 
-@media screen and (max-width:750px) {
-    .multimedia {
+
+@media screen and (max-width: 518px) {
+    .carousel-item {
+        width: 20rem;
         height: 20rem;
     }
 }
 
-@media screen and (max-width:575px) {
-    .multimedia {
+@media screen and (max-width: 375px) {
+    .carousel-item {
+        width: 15rem;
         height: 15rem;
-    }
-}
-
-@media screen and (max-width: 425px) {
-    .multimedia {
-        height: 10rem;
     }
 }
 
