--- a/sass/_mediaq.scss
+++ b/sass/_mediaq.scss
@@ -31,9 +31,10 @@
         width: 20rem;
     }
 
-    .navbar__menu-dropdown {
-        margin-top: 2rem;
-    }
+    // .navbar__menu-dropdown {
+    //     margin-top: 2rem;
+    //     align-items: center;
+    // }
 }
 
 @media screen and (min-width: 519px) {
