--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -82,21 +82,13 @@ main {
         }
 
         & a {
-            background-color: $btColor;
-            color: white;
+            @extend button;
             display: inline-block;
             width: 100%;
-            border-radius: 10px;
-            padding: 1px;
             text-align: center;
-            transition: background-color 1s;
             text-decoration: none;
-
-            &:hover {
-                background-color: $btColorDark;
-            }
+            border: none;
         }
-
     }
 }
 
