--- a/css/style.css
+++ b/css/style.css
@@ -11,19 +11,27 @@ body {
   color: #0D0D0D;
   width: 100%; }
 
-h2 {
-  font-size: 1.5rem;
+.subtitle__principal {
+  font-size: 2rem;
   display: flex;
   justify-content: center;
-  margin-bottom: 2rem;
+  margin: 2rem 0;
   color: black; }
+
+.subtitle__secundario {
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
+  color: #a64208;
+  margin-top: 4rem; }
 
 button, .card__product a, .form__btn button {
   font-family: 'Alegreya', serif;
   font-size: 1.2rem;
   background-color: #BF6E50;
   color: white;
-  padding: 1px;
+  padding: 2px;
   border-radius: 10px;
   border: 2px solid #0D0D0D;
   transition: background-color 1s; }
@@ -90,7 +98,7 @@ main {
     border-top-right-radius: 2rem; }
 
 .carousel {
-  margin: 6rem auto;
+  margin: 4rem auto;
   display: flex; }
   .carousel-item {
     width: 35rem;
@@ -138,7 +146,8 @@ main {
       width: 100%;
       text-align: center;
       text-decoration: none;
-      border: none; }
+      border: none;
+      padding: 1px; }
 
 .register label {
   font-size: 1rem;
@@ -185,13 +194,31 @@ main {
       width: 3rem;
       height: 3rem; }
 
-.description p {
+.description {
   font-family: "Frank Ruhl Libre", serif;
-  font-size: 3rem;
+  font-size: 2rem;
   text-align: justify;
   line-height: 1.5;
   padding: 3rem;
   margin-bottom: 3rem; }
+
+.img__perfiles {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  justify-items: center; }
+
+.img-ro {
+  width: 25rem;
+  height: 25rem;
+  border: 2px solid #BF6E50;
+  border-radius: 10px; }
+
+.img-flor {
+  width: 25rem;
+  height: 25rem;
+  border: 2px solid #BF6E50;
+  border-radius: 10px; }
 
 .form {
   background: linear-gradient(180deg, #bf6e50 60%, #ba6f6f 100%);
@@ -235,7 +262,7 @@ main {
   .navbar__pages ul {
     justify-content: left;
     padding-left: 1.5rem;
-    padding-top: 0rem; } }
+    margin-top: 0rem; } }
 
 @media screen and (max-width: 518px) {
   .navbar__pages ul {
@@ -318,22 +345,25 @@ main {
     height: 15rem;
     width: 15rem; } }
 
-@media screen and (max-width: 1440px) {
-  .description p {
-    font-size: 2.5rem;
-    margin-bottom: 5rem; } }
-
-@media screen and (max-width: 1024px) {
-  .description p {
-    font-size: 2rem; } }
-
-@media screen and (max-width: 768px) {
-  .description p {
+@media screen and (max-width: 425px) {
+  .subtitle__secundario {
     font-size: 1.5rem; } }
 
+@media screen and (max-width: 900px) {
+  .description {
+    font-size: 1.5rem; }
+  .img__perfiles {
+    grid-template-columns: 1fr; } }
+
 @media screen and (max-width: 425px) {
-  .description p {
+  .description {
     font-size: 1.2rem; }
+  .img-ro {
+    width: 15rem;
+    height: 15rem; }
+  .img-flor {
+    width: 15rem;
+    height: 15rem; }
   .footer__grid {
     grid-template-columns: 2fr; }
   .footer__grid-paid {
