--- a/sass/_mediaq.scss
+++ b/sass/_mediaq.scss
@@ -10,7 +10,7 @@
     .navbar__pages ul {
         justify-content: left;
         padding-left: 1.5rem;
-        padding-top: 0rem;
+        margin-top: 0rem;
     }
 }
 
@@ -30,11 +30,6 @@
     .form {
         width: 20rem;
     }
-
-    // .navbar__menu-dropdown {
-    //     margin-top: 2rem;
-    //     align-items: center;
-    // }
 }
 
 @media screen and (min-width: 519px) {
@@ -151,29 +146,36 @@
     }
 }
 
-@media screen and (max-width:1440px) {
-    .description p {
-        font-size: 2.5rem;
-        margin-bottom: 5rem;
-    }
-}
-
-@media screen and (max-width:1024px) {
-    .description p {
-        font-size: 2rem;
-    }
-}
-
-@media screen and (max-width:768px) {
-    .description p {
+@media screen and (max-width:425px) {
+    .subtitle__secundario {
         font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width:900px) {
+    .description {
+        font-size: 1.5rem;
+    }
+
+    .img__perfiles {
+        grid-template-columns: 1fr;
     }
 }
 
 @media screen and (max-width:425px) {
 
-    .description p {
+    .description {
         font-size: 1.2rem;
+    }
+
+    .img-ro {
+        width: 15rem;
+        height: 15rem;
+    }
+
+    .img-flor {
+        width: 15rem;
+        height: 15rem;
     }
 
     .footer__grid {
