--- a/sass/_nosotros.scss
+++ b/sass/_nosotros.scss
@@ -1,8 +1,29 @@
-.description p {
+.description {
     font-family: $pLetter;
-    font-size: 3rem;
+    font-size: 2rem;
     text-align: justify;
     line-height: 1.5;
     padding: 3rem;
     margin-bottom: 3rem;
     }
+
+.img__perfiles {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    justify-items: center;
+}
+
+$imagenesPerfiles: (
+    ro: 2px solid $btColor,
+    flor: 2px solid $btColor, 
+);
+
+@each $nombre, $border in $imagenesPerfiles {
+    .img-#{$nombre} {
+        width: 25rem;
+        height: 25rem;
+        border: $border;
+        border-radius: 10px;
+    }
+}
