--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -38,7 +38,7 @@
         &-option {
             font-family: $titlesLetter;
             color: white;
-            background-color: $btColor;
+            background-color: map-get($map: $colores, $key: btColor);
             padding: 0.5rem;
             border-radius: 10px;
             border: 1px solid black;
