--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,6 +1,6 @@
 .footer__grid {
     font-family: $navLetter;
-    background-color: $bgFooter;
+    background-color: map-get($map: $colores, $key: bgFooter);
     color: #0D0D0D;
     border-top: 2px solid #0D0D0D;
     padding-left: 1.5rem;
@@ -23,11 +23,10 @@
             font-size: 1.2rem;
             color: #0D0D0D;
             text-decoration: none;
-            transition: all 1s;
+            transition: all 0.3s;
 
-            &:hover {
-                font-size: 1.5rem;
-                color: $btColorDark;
+            &:active {
+                font-size: 1.3rem;
             }
         }
     }
