--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -10,7 +10,7 @@
 
     &-insta { 
         
-        & h3 {
+        & h4 {
             font-size: 1.8rem;
         }
 
@@ -33,11 +33,12 @@
 
         &-paid {
 
-            & h3 {
+            & h4 {
                 font-size: 1.8rem;
             }
 
-            & h4 {
+            & span {
+                display: flex;
                 font-size: 1.2rem;
             }
         }
