--- a/sass/_mediaq.scss
+++ b/sass/_mediaq.scss
@@ -146,7 +146,18 @@
     }
 }
 
+@media screen and (max-width:600px) {
+    .subtitle__principal {
+        font-size: 1.5rem;
+    }
+}
+
 @media screen and (max-width:425px) {
+
+    .subtitle__principal {
+        font-size: 1rem;
+    }
+
     .subtitle__secundario {
         font-size: 1.5rem;
     }
