--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -25,9 +25,10 @@ main {
 .carousel {
     margin: 4rem auto;
     display: flex;
+    width: 35rem;
 
     &-item {
-        width: 35rem;
+        width: 100%;
         height: 35rem;
 
         & img {
@@ -86,7 +87,7 @@ main {
             width: 100%;
             text-align: center;
             text-decoration: none;
-            border: none;
+            border: 3px outset map-get($map: $colores, $key: btColor);
             padding: 1px;
         }
     }
