--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -52,12 +52,12 @@ header {
                 }
             }
         }
-
-        &-buy img {
-            width: 3rem;
-            height: 3rem;
-            margin: 1rem;
-        }
-    }    
+    }
+    
+    &__buy img {
+        width: 3rem;
+        height: 3rem;
+        margin: 1rem;
+    }
     
 }
