nuevo background en la pagina imagenes

--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,12 @@ body {
   margin: 2rem 0;
   color: black; }
 
-.subtitle__secundario {
+.subtitle__secundario, .us__container-sub {
   font-size: 2.3rem;
   display: flex;
   justify-content: center;
   margin: 2rem 0;
-  color: #a64208;
+  color: #A64208;
   margin-top: 4rem; }
 
 button, .card__product a, .form__btn button {
@@ -36,7 +36,7 @@ button, .card__product a, .form__btn button {
   border: 2px solid #0D0D0D;
   transition: background-color 1s; }
   button:hover, .card__product a:hover {
-    background-color: #a64208; }
+    background-color: #A64208; }
   button:active, .card__product a:active {
     font-size: 1.1rem; }
 
@@ -44,7 +44,6 @@ header {
   height: 5rem;
   position: sticky;
   top: 0;
-  border-bottom-right-radius: 1rem;
   z-index: 10;
   background: linear-gradient(90deg, #bf6e50 60%, #ba6f6f 100%); }
 
@@ -84,22 +83,21 @@ header {
     margin: 1rem; }
 
 main {
-  padding-bottom: 50px;
+  padding-bottom: 3rem;
   margin: 0 auto; }
 
 .banner {
   display: flex; }
   .banner h1 {
     font-size: 3.5rem;
-    color: #a64208;
+    color: #A64208;
     width: 30%;
     padding-left: 1.5rem;
     padding-top: 3.5rem; }
   .banner img {
     height: 30rem;
     width: 70%;
-    border-bottom-right-radius: 2rem;
-    border-top-right-radius: 2rem; }
+    border-bottom-right-radius: 2rem; }
 
 .carousel {
   margin: 4rem auto;
@@ -201,13 +199,28 @@ main {
       width: 3rem;
       height: 3rem; }
 
-.description {
-  font-family: "Frank Ruhl Libre", serif;
-  font-size: 2rem;
-  text-align: justify;
-  line-height: 1.5;
-  padding: 3rem;
-  margin-bottom: 3rem; }
+.us {
+  padding-bottom: 0rem;
+  margin-top: 0rem;
+  width: 100%; }
+  .us__container {
+    background: rgba(0, 0, 0, 0.7) url("../Assets/moda.jpg");
+    background-blend-mode: darken;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 40rem; }
+    .us__container-sub {
+      color: white;
+      margin-top: 0rem; }
+    .us__container-description {
+      font-family: "Frank Ruhl Libre", serif;
+      color: white;
+      font-size: 1.6rem;
+      text-align: justify;
+      line-height: 1.5;
+      margin-top: 20rem;
+      padding: 0 1rem; }
 
 .form {
   background: linear-gradient(180deg, #bf6e50 60%, #ba6f6f 100%);
@@ -339,12 +352,31 @@ main {
 @media screen and (max-width: 425px) {
   .subtitle__principal {
     font-size: 1rem; }
-  .subtitle__secundario {
+  .subtitle__secundario, .us__container-sub {
     font-size: 1.5rem; } }
 
-@media screen and (max-width: 900px) {
-  .description {
-    font-size: 1.5rem; } }
+@media screen and (max-width: 805px) {
+  .us__container {
+    height: 30rem; }
+  .us__container-description {
+    font-size: 1.3rem;
+    margin-top: 12rem; } }
+
+@media screen and (max-width: 660px) {
+  .us__container-description {
+    margin-top: 7rem; } }
+
+@media screen and (max-width: 500px) {
+  .us__container-description {
+    font-size: 1rem; } }
+
+@media screen and (max-width: 425px) {
+  .us__container {
+    height: 25rem; } }
+
+@media screen and (max-width: 375px) {
+  .us__container-description {
+    margin-top: 3rem; } }
 
 @media screen and (max-width: 425px) {
   .description {
