--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,5 +1,5 @@
 main {
-    padding-bottom: 50px;
+    padding-bottom: 3rem;
     margin: 0 auto;
 }
 
@@ -18,7 +18,6 @@ main {
         height: 30rem;
         width: 70%;
         border-bottom-right-radius: 2rem;
-        border-top-right-radius: 2rem;
     }
 }
 
