--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,7 +4,7 @@ $colores:(
     colorGradiente: linear-gradient(90deg, rgba(191,110,80,1) 60%, rgba(186,111,111,1) 100%),
     bgFooter: #BFBBBA,
     btColor: #BF6E50,
-    btColorDark: #a64208,
+    btColorDark: #A64208,
 );
 
 // Tipos de letras
